--- a/TheGame2019/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TheGame2019/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,6 +129,14 @@ StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -863,5 +871,8 @@ WorldBrowser.TimeStamp=2019.11.15-22.41.17
 WorldBrowser.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2019.11.15-22.40.55
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+
+[AssetEditorSubsystem]
+CleanShutdown=False
 
 
