--- a/TheGame2019/Saved/Config/Windows/Engine.ini
+++ b/TheGame2019/Saved/Config/Windows/Engine.ini
@@ -11,6 +11,7 @@ Paths=../../../Engine/Plugins/Lumin/MagicLeap/Content
 Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Runtime/PostSplashScreen/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -27,5 +28,18 @@ TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/
 
 [/Script/LuminPlatformEditor.MagicLeapSDKSettings]
 MLSDKPath=(Path="")
+
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+JavaPath=(Path="")
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
